QtBeef/src/Qt/qtablewidget.bf

	[LinkName("QTableWidget_SupportedDropActions")]
	public static extern void* QTableWidget_SupportedDropActions(QTableWidget_Ptr* self);
	[LinkName("QTableWidget_DropEvent")]
	public static extern void QTableWidget_DropEvent(QTableWidget_Ptr* self, QDropEvent_Ptr* event);
	[LinkName("QTableWidget_Tr2")]
	public static extern libqt_string QTableWidget_Tr2(c_char* s, c_char* c);
	[LinkName("QTableWidget_Tr3")]
	public static extern libqt_string QTableWidget_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QTableWidget_SortItems2")]
	public static extern void QTableWidget_SortItems2(QTableWidget_Ptr* self, c_int column, Qt_SortOrder order);
	[LinkName("QTableWidget_ScrollToItem2")]
	public static extern void QTableWidget_ScrollToItem2(QTableWidget_Ptr* self, QTableWidgetItem_Ptr* item, QAbstractItemView_ScrollHint hint);
}
class QTableWidget
{
	private QTableWidget_Ptr* ptr;
	public this(QWidget_Ptr* parent)
	{
		this.ptr = CQt.QTableWidget_new(parent);
	}
	public this()
	{
		this.ptr = CQt.QTableWidget_new2();
	}
	public this(c_int rows, c_int columns)
	{
		this.ptr = CQt.QTableWidget_new3(rows, columns);
	}
	public this(c_int rows, c_int columns, QWidget_Ptr* parent)
	{
		this.ptr = CQt.QTableWidget_new4(rows, columns, parent);
	}
	public ~this()
	{
		CQt.QTableWidget_Delete(this.ptr);
	}
	public QMetaObject_Ptr* MetaObject()
	{
		return CQt.QTableWidget_MetaObject(this.ptr);
	}
	public void* Qt_metacast(c_char* param1)
	{
		return CQt.QTableWidget_Qt_Metacast(this.ptr, param1);
	}
	public c_int Qt_metacall(QMetaObject_Call param1, c_int param2, void** param3)
	{
		return CQt.QTableWidget_Qt_Metacall(this.ptr, param1, param2, param3);
	}
	public libqt_string Tr(c_char* s)
	{
		return CQt.QTableWidget_Tr(s);
	}
	public void SetRowCount(c_int rows)
	{
		CQt.QTableWidget_SetRowCount(this.ptr, rows);
	}
	public c_int RowCount()
	{
		return CQt.QTableWidget_RowCount(this.ptr);
	}
	public void SetColumnCount(c_int columns)
	{
		CQt.QTableWidget_SetColumnCount(this.ptr, columns);
	}
	public c_int ColumnCount()
	{
		return CQt.QTableWidget_ColumnCount(this.ptr);
	}
	public c_int Row(QTableWidgetItem_Ptr* item)
	{
		return CQt.QTableWidget_Row(this.ptr, item);
	}
	public c_int Column(QTableWidgetItem_Ptr* item)
	{
		return CQt.QTableWidget_Column(this.ptr, item);
	}
	public QTableWidgetItem_Ptr* Item(c_int row, c_int column)
	{
		return CQt.QTableWidget_Item(this.ptr, row, column);
	}
	public void SetItem(c_int row, c_int column, QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_SetItem(this.ptr, row, column, item);
	}
	public QTableWidgetItem_Ptr* TakeItem(c_int row, c_int column)
	{
		return CQt.QTableWidget_TakeItem(this.ptr, row, column);
	}
	public void* Items(QMimeData_Ptr* data)
	{
		return CQt.QTableWidget_Items(this.ptr, data);
	}
	public QModelIndex_Ptr IndexFromItem(QTableWidgetItem_Ptr* item)
	{
		return CQt.QTableWidget_IndexFromItem(this.ptr, item);
	}
	public QTableWidgetItem_Ptr* ItemFromIndex(QModelIndex_Ptr* index)
	{
		return CQt.QTableWidget_ItemFromIndex(this.ptr, index);
	}
	public QTableWidgetItem_Ptr* VerticalHeaderItem(c_int row)
	{
		return CQt.QTableWidget_VerticalHeaderItem(this.ptr, row);
	}
	public void SetVerticalHeaderItem(c_int row, QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_SetVerticalHeaderItem(this.ptr, row, item);
	}
	public QTableWidgetItem_Ptr* TakeVerticalHeaderItem(c_int row)
	{
		return CQt.QTableWidget_TakeVerticalHeaderItem(this.ptr, row);
	}
	public QTableWidgetItem_Ptr* HorizontalHeaderItem(c_int column)
	{
		return CQt.QTableWidget_HorizontalHeaderItem(this.ptr, column);
	}
	public void SetHorizontalHeaderItem(c_int column, QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_SetHorizontalHeaderItem(this.ptr, column, item);
	}
	public QTableWidgetItem_Ptr* TakeHorizontalHeaderItem(c_int column)
	{
		return CQt.QTableWidget_TakeHorizontalHeaderItem(this.ptr, column);
	}
	public void SetVerticalHeaderLabels(void** labels)
	{
		CQt.QTableWidget_SetVerticalHeaderLabels(this.ptr, labels);
	}
	public void SetHorizontalHeaderLabels(void** labels)
	{
		CQt.QTableWidget_SetHorizontalHeaderLabels(this.ptr, labels);
	}
	public c_int CurrentRow()
	{
		return CQt.QTableWidget_CurrentRow(this.ptr);
	}
	public c_int CurrentColumn()
	{
		return CQt.QTableWidget_CurrentColumn(this.ptr);
	}
	public QTableWidgetItem_Ptr* CurrentItem()
	{
		return CQt.QTableWidget_CurrentItem(this.ptr);
	}
	public void SetCurrentItem(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_SetCurrentItem(this.ptr, item);
	}
	public void SetCurrentItem2(QTableWidgetItem_Ptr* item, void* command)
	{
		CQt.QTableWidget_SetCurrentItem2(this.ptr, item, command);
	}
	public void SetCurrentCell(c_int row, c_int column)
	{
		CQt.QTableWidget_SetCurrentCell(this.ptr, row, column);
	}
	public void SetCurrentCell2(c_int row, c_int column, void* command)
	{
		CQt.QTableWidget_SetCurrentCell2(this.ptr, row, column, command);
	}
	public void SortItems(c_int column)
	{
		CQt.QTableWidget_SortItems(this.ptr, column);
	}
	public void SetSortingEnabled(bool enable)
	{
		CQt.QTableWidget_SetSortingEnabled(this.ptr, enable);
	}
	public bool IsSortingEnabled()
	{
		return CQt.QTableWidget_IsSortingEnabled(this.ptr);
	}
	public void EditItem(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_EditItem(this.ptr, item);
	}
	public void OpenPersistentEditor(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_OpenPersistentEditor(this.ptr, item);
	}
	public void ClosePersistentEditor(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_ClosePersistentEditor(this.ptr, item);
	}
	public bool IsPersistentEditorOpen(QTableWidgetItem_Ptr* item)
	{
		return CQt.QTableWidget_IsPersistentEditorOpen(this.ptr, item);
	}
	public QWidget_Ptr* CellWidget(c_int row, c_int column)
	{
		return CQt.QTableWidget_CellWidget(this.ptr, row, column);
	}
	public void SetCellWidget(c_int row, c_int column, QWidget_Ptr* widget)
	{
		CQt.QTableWidget_SetCellWidget(this.ptr, row, column, widget);
	}
	public void RemoveCellWidget(c_int row, c_int column)
	{
		CQt.QTableWidget_RemoveCellWidget(this.ptr, row, column);
	}
	public void SetRangeSelected(QTableWidgetSelectionRange_Ptr* range, bool selectVal)
	{
		CQt.QTableWidget_SetRangeSelected(this.ptr, range, selectVal);
	}
	public void* SelectedRanges()
	{
		return CQt.QTableWidget_SelectedRanges(this.ptr);
	}
	public void* SelectedItems()
	{
		return CQt.QTableWidget_SelectedItems(this.ptr);
	}
	public void* FindItems(libqt_string* text, void* flags)
	{
		return CQt.QTableWidget_FindItems(this.ptr, text, flags);
	}
	public c_int VisualRow(c_int logicalRow)
	{
		return CQt.QTableWidget_VisualRow(this.ptr, logicalRow);
	}
	public c_int VisualColumn(c_int logicalColumn)
	{
		return CQt.QTableWidget_VisualColumn(this.ptr, logicalColumn);
	}
	public QTableWidgetItem_Ptr* ItemAt(QPoint_Ptr* p)
	{
		return CQt.QTableWidget_ItemAt(this.ptr, p);
	}
	public QTableWidgetItem_Ptr* ItemAt2(c_int x, c_int y)
	{
		return CQt.QTableWidget_ItemAt2(this.ptr, x, y);
	}
	public QRect_Ptr VisualItemRect(QTableWidgetItem_Ptr* item)
	{
		return CQt.QTableWidget_VisualItemRect(this.ptr, item);
	}
	public QTableWidgetItem_Ptr* ItemPrototype()
	{
		return CQt.QTableWidget_ItemPrototype(this.ptr);
	}
	public void SetItemPrototype(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_SetItemPrototype(this.ptr, item);
	}
	public void ScrollToItem(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_ScrollToItem(this.ptr, item);
	}
	public void InsertRow(c_int row)
	{
		CQt.QTableWidget_InsertRow(this.ptr, row);
	}
	public void InsertColumn(c_int column)
	{
		CQt.QTableWidget_InsertColumn(this.ptr, column);
	}
	public void RemoveRow(c_int row)
	{
		CQt.QTableWidget_RemoveRow(this.ptr, row);
	}
	public void RemoveColumn(c_int column)
	{
		CQt.QTableWidget_RemoveColumn(this.ptr, column);
	}
	public void Clear()
	{
		CQt.QTableWidget_Clear(this.ptr);
	}
	public void ClearContents()
	{
		CQt.QTableWidget_ClearContents(this.ptr);
	}
	public void ItemPressed(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_ItemPressed(this.ptr, item);
	}
	public void ItemClicked(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_ItemClicked(this.ptr, item);
	}
	public void ItemDoubleClicked(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_ItemDoubleClicked(this.ptr, item);
	}
	public void ItemActivated(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_ItemActivated(this.ptr, item);
	}
	public void ItemEntered(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_ItemEntered(this.ptr, item);
	}
	public void ItemChanged(QTableWidgetItem_Ptr* item)
	{
		CQt.QTableWidget_ItemChanged(this.ptr, item);
	}
	public void CurrentItemChanged(QTableWidgetItem_Ptr* current, QTableWidgetItem_Ptr* previous)
	{
		CQt.QTableWidget_CurrentItemChanged(this.ptr, current, previous);
	}
	public void ItemSelectionChanged()
	{
		CQt.QTableWidget_ItemSelectionChanged(this.ptr);
	}
	public void CellPressed(c_int row, c_int column)
	{
		CQt.QTableWidget_CellPressed(this.ptr, row, column);
	}
	public void CellClicked(c_int row, c_int column)
	{
		CQt.QTableWidget_CellClicked(this.ptr, row, column);
	}
	public void CellDoubleClicked(c_int row, c_int column)
	{
		CQt.QTableWidget_CellDoubleClicked(this.ptr, row, column);
	}
	public void CellActivated(c_int row, c_int column)
	{
		CQt.QTableWidget_CellActivated(this.ptr, row, column);
	}
	public void CellEntered(c_int row, c_int column)
	{
		CQt.QTableWidget_CellEntered(this.ptr, row, column);
	}
	public void CellChanged(c_int row, c_int column)
	{
		CQt.QTableWidget_CellChanged(this.ptr, row, column);
	}
	public void CurrentCellChanged(c_int currentRow, c_int currentColumn, c_int previousRow, c_int previousColumn)
	{
		CQt.QTableWidget_CurrentCellChanged(this.ptr, currentRow, currentColumn, previousRow, previousColumn);
	}
	public bool Event(QEvent_Ptr* e)
	{
		return CQt.QTableWidget_Event(this.ptr, e);
	}
	public void* MimeTypes()
	{
		return CQt.QTableWidget_MimeTypes(this.ptr);
	}
	public QMimeData_Ptr* MimeData(void** items)
	{
		return CQt.QTableWidget_MimeData(this.ptr, items);
	}
	public bool DropMimeData(c_int row, c_int column, QMimeData_Ptr* data, Qt_DropAction action)
	{
		return CQt.QTableWidget_DropMimeData(this.ptr, row, column, data, action);
	}
	public void* SupportedDropActions()
	{
		return CQt.QTableWidget_SupportedDropActions(this.ptr);
	}
	public void DropEvent(QDropEvent_Ptr* event)
	{
		CQt.QTableWidget_DropEvent(this.ptr, event);
	}
	public libqt_string Tr2(c_char* s, c_char* c)
	{
		return CQt.QTableWidget_Tr2(s, c);
	}
	public libqt_string Tr3(c_char* s, c_char* c, c_int n)
	{
		return CQt.QTableWidget_Tr3(s, c, n);
	}
	public void SortItems2(c_int column, Qt_SortOrder order)
	{
		CQt.QTableWidget_SortItems2(this.ptr, column, order);
	}
	public void ScrollToItem2(QTableWidgetItem_Ptr* item, QAbstractItemView_ScrollHint hint)
	{
		CQt.QTableWidget_ScrollToItem2(this.ptr, item, hint);
	}
}
